Fixed whitespace and centered

--- a/fridge-app/frontend/src/App.css
+++ b/fridge-app/frontend/src/App.css
@@ -11,6 +11,7 @@ body {
 
 .App {
   background-color: rgb(176, 224, 230);
+  height: 100vh;
 }
 
 .home-page-div{
